Slide 2: improve extrinsic and intrinsic slides

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -458,24 +458,23 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
    
     Ejemplo de aplicación de Ángulos de Euler $\alpha$, $\beta$ y $\gamma$ utilizando la combinación $zx^{\prime}z^{\prime\prime}$:
     \begin{figure}[!h]
-        \centering
         \subfloat[]
         {
             \movie[autostart,loop,poster]{\includegraphics[width=0.1\columnwidth,valign=m]{./images/euler_angles_video.jpg}}{./videos/euler_angles.mp4}
         }
-        \subfloat[$R = R_{z}(\alpha) \, R_{x}(\beta) \, R_{z}(\gamma)$]
+        \subfloat[\scriptsize $R = R_{z}(\alpha) \, R_{x^{\prime}}(\beta) \, R_{z^{\prime\prime}}(\gamma)$]
         {
             \includegraphics[width=0.21\columnwidth,valign=m]{./images/euler_angles_initial.pdf}
         }
-        \subfloat[$R_{z}(\alpha)$]
+        \subfloat[\scriptsize $R_{z}(\alpha)$]
         {
             \includegraphics[width=0.21\columnwidth,valign=m]{./images/euler_angles_alpha_rotation.pdf}
         }
-        \subfloat[$R_{x}(\beta)$]
+        \subfloat[\scriptsize $R_{x^{\prime}}(\beta)$]
         {
            \includegraphics[width=0.21\columnwidth,valign=m]{./images/euler_angles_beta_rotation.pdf}
         }
-        \subfloat[$R_{z}(\gamma)$]
+        \subfloat[\scriptsize $R_{z^{\prime\prime}}(\gamma)$]
         {
             \includegraphics[width=0.21\columnwidth,valign=m]{./images/euler_angles_gamma_rotation.pdf}
         }
