Slide 2: improve extrinsic and intrinsic slides

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -490,7 +490,7 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     \end{block}
     
     \begin{block}{Ángulos de Roll-Pitch-Yaw}
-        Específicamente, la combinación $zyx$ de Ángulos de Tait-Bryann se denomina $Roll$, $Pitch$ y $Yaw$.
+        Específicamente, la combinación $xyz$ de Ángulos de Tait-Bryann se denomina $Roll$, $Pitch$ y $Yaw$.
     \end{block}
     
     Matríz de Rotación resultante utilizando ángulos Roll-Pitch-Yaw:
