--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -184,7 +184,7 @@ rqt
         
         \footnotesize
         \begin{lstlisting}[style=bash]    
-            ros2 run turtlesim turtle_teleop_key --ros-args --remap turtle1/cmd_vel:=turtle2/cmd_vel
+ros2 run turtlesim turtle_teleop_key --ros-args --remap turtle1/cmd_vel:=turtle2/cmd_vel
         \end{lstlisting}
     \end{itemize}
 
@@ -283,7 +283,7 @@ Publicar mensajes utilizando la línea de comandos:
 ros2 topic pub <topic_name> <msg_type> '<args>'
 \end{lstlisting}    
 Ejemplo:
-\begin{lstlisting}[style=bash,basicstyle=\tiny]  
+\begin{lstlisting}[style=bash,basicstyle=tiny]  
 ros2 topic pub --rate 1 /turtle1/cmd_vel geometry_msgs/msg/Twist "{linear: {x: 2.0, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: 1.8}}"
 \end{lstlisting}    
 Saber la prefuencia en que se publica un mensaje
