Slide 4: improve slide

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -433,29 +433,9 @@ ros2 pkg create test_pkg --build-type ament_cmake --node-name <node_name> <packa
     \end{itemize}	
 \end{frame}
 
-\begin{frame}[fragile]
-	\frametitle{Rosbags (ros2 bag)}
-    \begin{itemize}
-	   \item \lstinline[style=bash]{ros2 bag} es una herramienta de línea de comandos para grabar datos publicados sobre tópicos en su sistema.
-       \item Acumula los datos transmitidos sobre cualquier número de tópicos y los guarda en una base de datos. 
-       \item Luego, puede reproducir los datos para reproducir los resultados de sus pruebas y experimentos.
-       \item Grabar tópicos también es una excelente manera de compartir el trabajo y permitir que otros lo reproduzcan.
-
-        \begin{lstlisting}[style=bash] 
-ros2 bag record <topic_name>
-ros2 bag info <bag_file_name>
-ros2 bag play <bag_file_name>
-ros2 bag compress <bag_file_name>
-ros2 bag decompress <bag_file_name>
-...
-        \end{lstlisting}
-    \end{itemize}
-
-	
-\end{frame}
 
 \begin{frame}[fragile]
-	\frametitle{Ejemplo: Publicador y Subscriptor}
+	\frametitle{Ejemplo: creemos un paquete que contenga Publicador y Subscriptor}
     
     \begin{columns}
         \begin{column}{0.5\textwidth}
@@ -476,7 +456,7 @@ ros2 run cpp_pubsub listener
 \end{frame}
 
 \begin{frame}[fragile]
-    \frametitle{Ejemplo: Publicador y Subscriptor}
+    \frametitle{Ejemplo: creemos un paquete que contenga Publicador y Subscriptor}
     
     \begin{columns}
         \begin{column}{0.5\textwidth}
@@ -490,7 +470,7 @@ ros2 run cpp_pubsub listener
 \end{frame}
 
 \begin{frame}[fragile]
-    \frametitle{Ejemplo: Publicador y Subscriptor}
+    \frametitle{Ejemplo: creemos un paquete que contenga Publicador y Subscriptor}
     
     \begin{columns}
         \begin{column}{0.5\textwidth}
@@ -508,6 +488,26 @@ ros2 run cpp_pubsub talker
     \begin{lstlisting}[style=bash] 
 ros2 run cpp_pubsub listener
     \end{lstlisting}
+\end{frame}
+
+
+\begin{frame}[fragile]
+    \frametitle{Rosbags (\lstinline[style=bash]{ros2 bag})}
+    \begin{itemize}
+        \item \lstinline[style=bash]{ros2 bag} es una herramienta de línea de comandos para grabar datos publicados sobre tópicos en su sistema.
+        \item Acumula los datos transmitidos sobre cualquier número de tópicos y los guarda en una base de datos. 
+        \item Luego, puede reproducir los datos para reproducir los resultados de sus pruebas y experimentos.
+        \item Grabar tópicos también es una excelente manera de compartir el trabajo y permitir que otros lo reproduzcan.
+        
+        \begin{lstlisting}[style=bash] 
+            ros2 bag record <topic_name>
+            ros2 bag info <bag_file_name>
+            ros2 bag play <bag_file_name>
+            ros2 bag compress <bag_file_name>
+            ros2 bag decompress <bag_file_name>
+            ...
+        \end{lstlisting}
+    \end{itemize}
 \end{frame}
 
 
@@ -561,7 +561,7 @@ ros2 launch nav2_bringup tb3_simulation_launch.py headless:=False
     \frametitle{Ejemplo completo: Navegación con Turtlebot3}
     
     \begin{center}
-        \movie[loop]{\includegraphics[width=\columnwidth]{images/turtlebot_navigation_video.png}}{videos/turtlebot_navigation.avi}
+        \movie[autostart,loop,poster]{\includegraphics[width=\columnwidth]{images/turtlebot_navigation_video.png}}{videos/turtlebot_navigation.avi}
     \end{center}
     
 \end{frame}
@@ -593,24 +593,30 @@ ros2 launch nav2_bringup tb3_simulation_launch.py headless:=False
 
 \begin{frame}[fragile]
     \frametitle{TF: transformaciones en ROS}
-    \footnotesize
+    \scriptsize
         \begin{columns}
     	\begin{column}{0.5\textwidth}
 		    \begin{itemize}
 				\item TF listeners usan un buffer para escuchar las transformaciones broadcasteadas
 				\item Se puede consultar una transformación específica al árbol de transformaciones
-                \item El tipo de mensaje de tf2 (\lstinline[style=bash]{tf2_msgs/TFMessage.msg}) está compuesto por:
-			\end{itemize}
-\begin{lstlisting}[style=bash] 
+                \item El tipo de mensaje de tf2 (\lstinline[style=bash]{tf2_msgs/TFMessage.msg})
+                \begin{lstlisting}[style=bash] 
 geometry_msgs/TransformStamped[] transforms
+                \end{lstlisting}
+                \item El tipo de mensaje \lstinline[style=bash]{geometry_msgs/TransformStamped}
+                \begin{lstlisting}[style=bash] 
 std_msgs/Header header
 uint32 seqtime stamp
 string frame_id
 string child_frame_id
 geometry_msgs/Transform transform
+                \end{lstlisting}
+                \item El tipo de mensaje \lstinline[style=bash]{geometry_msgs/Transform}
+                \begin{lstlisting}[style=bash] 
 geometry_msgs/Vector3 translation
 geometry_msgs/Quaternion rotation
-\end{lstlisting}
+                \end{lstlisting}
+			\end{itemize}
     	\end{column}
     	\begin{column}{0.5\textwidth}
     		\includegraphics[width=\columnwidth]{images/tf2_tree_graph.png}
