Tp1: improve execersice

--- a/teoricas/teorica_03/src/imu.tex
+++ b/teoricas/teorica_03/src/imu.tex
@@ -11,8 +11,10 @@
 
     \begin{block}{Principio de funcionamiento}
         \begin{itemize}
-            \item Un giróscopo es todo cuerpo simétrico en rotación a una velocidad suficiente como para experimentar los efectos giroscópicos.
-            \item Los giróscopos son dispositivos que miden o mantienen el movimiento de rotación.
+            \item Un giróscopo mecánico es todo cuerpo simétrico en rotación a una velocidad suficiente como para experimentar los efectos giroscópicos.
+            \item Los giróscopos mecánicos son dispositivos que miden o mantienen el movimiento de rotación.
+            \item El Giróscopo Mecánico puede ser utilizado para fijar una \textbf{orientación absoluta} haciendo que el disco gire en dicha dirección (utilizando el principio de \textbf{Rigidez en el espacio})
+            \item El Giróscopo Mecánico puede ser utilizado para medir \textbf{velocidad angular} (utilizando el principio giroscópico de \textbf{Movimiento de Preseción})
         \end{itemize}
     \end{block}
     
@@ -25,7 +27,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Giróscopo: Principios giroscópicos}
+    \frametitle{Giróscopo Mecánico: Principios giroscópicos}
     \note{https://www.youtube.com/watch?v=nhNg-8RSuKY}
     \scriptsize
     
@@ -55,8 +57,6 @@
         \end{itemize}
     \end{block}
     }
-    
-
 
     \note{Un trompo es un giróscopo! cuando esta por caerse muestra el efecto de precesión. La fuerza que se le aplica es la de la gravedad y hace que se mueva realizando una circunsferencia con su eje.}
 \end{frame}
@@ -159,6 +159,15 @@
     \end{itemize}
 
 \end{frame}
+
+\begin{frame}
+    \frametitle{Giróscopo Óptico: Sagnac Effect}
+    \scriptsize
+    
+    \TODO{Ver vídeo: https://www.youtube.com/watch?v=V6XSsNAWg00 para extraer sub-videos y aplicaciones (orientación abosuoluta y calculo de velocidad de angular) y giróscopo óptico}
+    
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Acelerómetro}
